--- a/modules/intro.ipynb
+++ b/modules/intro.ipynb
@@ -1,1 +1,166 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["# Modules\n", "\n", "List of all modules and content related to them."]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Year 1\n", "(module-mm1)=\n", "### Maths Methods 1\n", "\n", "[<!-- module-mm1 badge --><span class=\"module module-mm1\">Maths Methods 1</span>](module-mm1)\n", "\n", "- {doc}`Eigenvalues <notebooks\\mathematics\\moduletags.ipynb>`\n", "- {doc}`Matrix multiplication <notebooks\\mathematics\\complex_analysis\\mynotebook.ipynb>`\n", "- {doc}`Matrices (Lecture 4) <notebooks\\modules\\math_methods_1\\Matrices_Linear_Algebra.ipynb>`\n", "\n", "(module-mm2)=\n", "### Maths Methods 2\n", "\n", "[<!-- module-mm2 badge --><span class=\"module module-mm2\">Maths Methods 2</span>](module-mm2)\n", "\n", "- {doc}`Fluid Dynamics <notebooks\\mathematics\\moduletags.ipynb>`\n", "- {doc}`Timestepping an ODE <notebooks\\mathematics\\moduletags.ipynb>`\n", "\n", "(module-dynep)=\n", "### Dynamic Earth and Planets\n", "\n", "[<!-- module-dynep badge --><span class=\"module module-dynep\">Dynamic Earth and Planets</span>](module-dynep)\n", "\n", "- {doc}`Seafloor ages <notebooks\\geosciences\\Dynamic_Earth.ipynb>`\n", "\n", "(module-progr)=\n", "### Programming for Geoscientists\n", "\n", "[<!-- module-progr badge --><span class=\"module module-progr\">Programming for Geoscientists</span>](module-progr)\n", "\n", "\n", "## Year 2\n", "(module-mse1)=\n", "### Maths for Scientists and Engineers 1\n", "\n", "[<!-- module-mse1 badge --><span class=\"module module-mse1\">Maths for Scientists and Engineers 1</span>](module-mse1)\n", "\n", "\n", "(module-mse2)=\n", "### Maths for Scientists and Engineers 2\n", "\n", "[<!-- module-mse2 badge --><span class=\"module module-mse2\">Maths for Scientists and Engineers 2</span>](module-mse2)\n", "\n", "- {doc}`Laplace's \\\\( u_{xx} + u_{yy} = 0 \\\\) <notebooks\\mathematics\\moduletags.ipynb>`\n", "\n", "(module-nm)=\n", "### Numerical Methods\n", "\n", "[<!-- module-nm badge --><span class=\"module module-nm\">Numerical Methods</span>](module-nm)\n", "\n", "- {doc}`Timestepping an ODE <notebooks\\mathematics\\moduletags.ipynb>`\n", "\n", "(module-rs)=\n", "### Remote Sensing\n", "\n", "[<!-- module-rs badge --><span class=\"module module-rs\">Remote Sensing</span>](module-rs)\n", "\n", "- {doc}`Moving average filter <notebooks\\geosciences\\remote_sensing\\Image_Filtering.ipynb>`\n", "- {doc}`Sharpening filters <notebooks\\geosciences\\remote_sensing\\Image_Filtering.ipynb>`\n", "- {doc}`Edge detection (gradient operators) <notebooks\\geosciences\\remote_sensing\\Image_Filtering.ipynb>`\n", "- {doc}`Point operations <notebooks\\geosciences\\remote_sensing\\Image_Point_Operations.ipynb>`\n", "\n", "(module-seism)=\n", "### Seismology\n", "\n", "[<!-- module-seism badge --><span class=\"module module-seism\">Seismology</span>](module-seism)\n", "\n", "- {doc}`Downloading earthquake data <notebooks\\geosciences\\Seismology.ipynb>`\n", "\n", "(module-fieldgps)=\n", "### Field Geophysics\n", "\n", "[<!-- module-fieldgps badge --><span class=\"module module-fieldgps\">Field Geophysics</span>](module-fieldgps)\n", "\n", "- {doc}`1D resistivity forward modelling <notebooks\\geosciences\\1D_Resistivity_Forward_Modelling.ipynb>`\n", "\n", "## Year 3/4\n", "(module-geoinv)=\n", "### Geophysical Inversion\n", "\n", "[<!-- module-geoinv badge --><span class=\"module module-geoinv\">Geophysical Inversion</span>](module-geoinv)\n", "\n", "- {doc}`Eigenvalues <notebooks\\mathematics\\moduletags.ipynb>`\n", "\n", "(module-advrs)=\n", "### Advanced Remote Sensing\n", "\n", "[<!-- module-advrs badge --><span class=\"module module-advrs\">Advanced Remote Sensing</span>](module-advrs)\n", "\n", "- {doc}`Point operations <notebooks\\geosciences\\remote_sensing\\Image_Point_Operations.ipynb>`\n", "- {doc}`Cut-off clipping <notebooks\\geosciences\\remote_sensing\\Image_Point_Operations.ipynb>`\n", "- {doc}`Contrast enhancement <notebooks\\geosciences\\remote_sensing\\Image_Point_Operations.ipynb>`\n", "- {doc}`Balance contrast enhancement technique (BCET)$^2$ <notebooks\\geosciences\\remote_sensing\\Image_Point_Operations.ipynb>`\n", "\n", "(module-igp)=\n", "### Independent Geophysics Project\n", "\n", "[<!-- module-igp badge --><span class=\"module module-igp\">Independent Geophysics Project</span>](module-igp)\n", "\n", "\n", "(module-gmod)=\n", "### Grav., Magn. and Orbital Dynamics\n", "\n", "[<!-- module-gmod badge --><span class=\"module module-gmod\">Grav., Magn. and Orbital Dynamics</span>](module-gmod)\n", "\n", "- {doc}`Keplerian orbits <notebooks\\geosciences\\Keplerian_Orbits.ipynb>`\n", "\n", "(module-geodyn)=\n", "### Geodynamics\n", "\n", "[<!-- module-geodyn badge --><span class=\"module module-geodyn\">Geodynamics</span>](module-geodyn)\n", "\n", "- {doc}`1D heat conduction (layered medium) <notebooks\\geosciences\\1D_Heat_Conduction.ipynb>`\n", "\n"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": []}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.7.4"}}, "nbformat": 4, "nbformat_minor": 4}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modules\n",
+    "\n",
+    "Here you can find sections created specifically for certain modules, containing notebooks very closely connected to lectures. These are:\n",
+    "\n",
+    "```{tableofcontents}\n",
+    "```\n",
+    "\n",
+    "Below you can find links to notebooks from the entire website whose content is related to certain modules."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Year 1\n",
+    "(module-mm1)=\n",
+    "### Maths Methods 1\n",
+    "\n",
+    "[<!-- module-mm1 badge --><span class=\"module module-mm1\">Maths Methods 1</span>](module-mm1)\n",
+    "\n",
+    "- {doc}`Eigenvalues <notebooks\\mathematics\\moduletags.ipynb>`\n",
+    "- {doc}`Matrix multiplication <notebooks\\mathematics\\complex_analysis\\mynotebook.ipynb>`\n",
+    "- {doc}`Matrices (Lecture 4) <notebooks\\modules\\math_methods_1\\Matrices_Linear_Algebra.ipynb>`\n",
+    "\n",
+    "(module-mm2)=\n",
+    "### Maths Methods 2\n",
+    "\n",
+    "[<!-- module-mm2 badge --><span class=\"module module-mm2\">Maths Methods 2</span>](module-mm2)\n",
+    "\n",
+    "- {doc}`Fluid Dynamics <notebooks\\mathematics\\moduletags.ipynb>`\n",
+    "- {doc}`Timestepping an ODE <notebooks\\mathematics\\moduletags.ipynb>`\n",
+    "\n",
+    "(module-dynep)=\n",
+    "### Dynamic Earth and Planets\n",
+    "\n",
+    "[<!-- module-dynep badge --><span class=\"module module-dynep\">Dynamic Earth and Planets</span>](module-dynep)\n",
+    "\n",
+    "- {doc}`Seafloor ages <notebooks\\geosciences\\Dynamic_Earth.ipynb>`\n",
+    "\n",
+    "(module-progr)=\n",
+    "### Programming for Geoscientists\n",
+    "\n",
+    "[<!-- module-progr badge --><span class=\"module module-progr\">Programming for Geoscientists</span>](module-progr)\n",
+    "\n",
+    "\n",
+    "## Year 2\n",
+    "(module-mse1)=\n",
+    "### Maths for Scientists and Engineers 1\n",
+    "\n",
+    "[<!-- module-mse1 badge --><span class=\"module module-mse1\">Maths for Scientists and Engineers 1</span>](module-mse1)\n",
+    "\n",
+    "\n",
+    "(module-mse2)=\n",
+    "### Maths for Scientists and Engineers 2\n",
+    "\n",
+    "[<!-- module-mse2 badge --><span class=\"module module-mse2\">Maths for Scientists and Engineers 2</span>](module-mse2)\n",
+    "\n",
+    "- {doc}`Laplace's \\\\( u_{xx} + u_{yy} = 0 \\\\) <notebooks\\mathematics\\moduletags.ipynb>`\n",
+    "\n",
+    "(module-nm)=\n",
+    "### Numerical Methods\n",
+    "\n",
+    "[<!-- module-nm badge --><span class=\"module module-nm\">Numerical Methods</span>](module-nm)\n",
+    "\n",
+    "- {doc}`Timestepping an ODE <notebooks\\mathematics\\moduletags.ipynb>`\n",
+    "\n",
+    "(module-rs)=\n",
+    "### Remote Sensing\n",
+    "\n",
+    "[<!-- module-rs badge --><span class=\"module module-rs\">Remote Sensing</span>](module-rs)\n",
+    "\n",
+    "- {doc}`Moving average filter <notebooks\\geosciences\\remote_sensing\\Image_Filtering.ipynb>`\n",
+    "- {doc}`Sharpening filters <notebooks\\geosciences\\remote_sensing\\Image_Filtering.ipynb>`\n",
+    "- {doc}`Edge detection (gradient operators) <notebooks\\geosciences\\remote_sensing\\Image_Filtering.ipynb>`\n",
+    "- {doc}`Point operations <notebooks\\geosciences\\remote_sensing\\Image_Point_Operations.ipynb>`\n",
+    "\n",
+    "(module-seism)=\n",
+    "### Seismology\n",
+    "\n",
+    "[<!-- module-seism badge --><span class=\"module module-seism\">Seismology</span>](module-seism)\n",
+    "\n",
+    "- {doc}`Downloading earthquake data <notebooks\\geosciences\\Seismology.ipynb>`\n",
+    "\n",
+    "(module-fieldgps)=\n",
+    "### Field Geophysics\n",
+    "\n",
+    "[<!-- module-fieldgps badge --><span class=\"module module-fieldgps\">Field Geophysics</span>](module-fieldgps)\n",
+    "\n",
+    "- {doc}`1D resistivity forward modelling <notebooks\\geosciences\\1D_Resistivity_Forward_Modelling.ipynb>`\n",
+    "\n",
+    "## Year 3/4\n",
+    "(module-geoinv)=\n",
+    "### Geophysical Inversion\n",
+    "\n",
+    "[<!-- module-geoinv badge --><span class=\"module module-geoinv\">Geophysical Inversion</span>](module-geoinv)\n",
+    "\n",
+    "- {doc}`Eigenvalues <notebooks\\mathematics\\moduletags.ipynb>`\n",
+    "\n",
+    "(module-advrs)=\n",
+    "### Advanced Remote Sensing\n",
+    "\n",
+    "[<!-- module-advrs badge --><span class=\"module module-advrs\">Advanced Remote Sensing</span>](module-advrs)\n",
+    "\n",
+    "- {doc}`Point operations <notebooks\\geosciences\\remote_sensing\\Image_Point_Operations.ipynb>`\n",
+    "- {doc}`Cut-off clipping <notebooks\\geosciences\\remote_sensing\\Image_Point_Operations.ipynb>`\n",
+    "- {doc}`Contrast enhancement <notebooks\\geosciences\\remote_sensing\\Image_Point_Operations.ipynb>`\n",
+    "- {doc}`Balance contrast enhancement technique (BCET)$^2$ <notebooks\\geosciences\\remote_sensing\\Image_Point_Operations.ipynb>`\n",
+    "\n",
+    "(module-igp)=\n",
+    "### Independent Geophysics Project\n",
+    "\n",
+    "[<!-- module-igp badge --><span class=\"module module-igp\">Independent Geophysics Project</span>](module-igp)\n",
+    "\n",
+    "\n",
+    "(module-gmod)=\n",
+    "### Grav., Magn. and Orbital Dynamics\n",
+    "\n",
+    "[<!-- module-gmod badge --><span class=\"module module-gmod\">Grav., Magn. and Orbital Dynamics</span>](module-gmod)\n",
+    "\n",
+    "- {doc}`Keplerian orbits <notebooks\\geosciences\\Keplerian_Orbits.ipynb>`\n",
+    "\n",
+    "(module-geodyn)=\n",
+    "### Geodynamics\n",
+    "\n",
+    "[<!-- module-geodyn badge --><span class=\"module module-geodyn\">Geodynamics</span>](module-geodyn)\n",
+    "\n",
+    "- {doc}`1D heat conduction (layered medium) <notebooks\\geosciences\\1D_Heat_Conduction.ipynb>`\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
