--- a/_sources/2_coding/Programming Tools/1_Version_Control_Git.ipynb
+++ b/_sources/2_coding/Programming Tools/1_Version_Control_Git.ipynb
@@ -7,11 +7,11 @@
     "(version_control_git)=\n",
     "# Version control Git\n",
     "\n",
-    "As a future researcher, professional or enthusiast you will find out that maintaing a high standard of code is a considerable challenge. This can get even harder when multiple programmers are involved. Coding can be very rewarding, but it is also full of pitfalls and requires a *trial-and-error* approach.  \n",
+    "As a future researcher, professional or enthusiast you will find out that maintaining a high standard of code is a considerable challenge. This can get even harder when multiple programmers are involved. Coding can be very rewarding, but it is also full of pitfalls and requires a *trial-and-error* approach.  \n",
     "\n",
     "This is where **version control** comes in. It is a software which allows you to track the development of your coding project. It also enables your peers to work on different versions of the same structure. \n",
     "\n",
-    "The most well known version control facility is [git](https://git-scm.com/) but there are others such as [mercurial](https://www.mercurial-scm.org/). We are going to tackle the former. There are many platforms that allow to host git repositories, but the most well known is [GitHub](https://github.com/). This is the one we are going to use. "
+    "The most well-known version control facility is [Git](https://git-scm.com/) but there are others such as [Mercurial](https://www.mercurial-scm.org/). We are going to tackle the former. Many platforms allow to host Git repositories, but the most well known is [GitHub](https://github.com/). This is the one we are going to use. "
    ]
   },
   {
@@ -20,7 +20,7 @@
    "source": [
     "## Setting up Git\n",
     "\n",
-    "If you are on macOS or most distributions of Linux, you have git already configured on your machine. \n",
+    "If you are on MacOS or most distributions of Linux, you have git already configured on your machine. \n",
     "For Windows, you will need to download and install [Git for Windows](https://gitforwindows.org/).\n",
     "We will be accessing git via the terminal (*Git Bash* on Windows)."
    ]
@@ -33,7 +33,7 @@
     "\n",
     "We create a repository on Github and then connect to it with the terminal. \n",
     "\n",
-    "If you want to try the first option, check out [this page](https://kbroman.org/github_tutorial/pages/init.html). Otherwise follow these steps.\n",
+    "Follow these steps:\n",
     "\n",
     "1) Create a GitHub account [here](https://github.com/join)\n",
     "\n",
@@ -45,7 +45,7 @@
     "\n",
     "5) Initialise this repository with a README (used to describe the repository)\n",
     "\n",
-    "6) Create Repository (Green)\n",
+    "6) Create a Repository (Green)\n",
     "\n",
     "Now your repository is on Github, time to connect it to your local machine.\n",
     "\n",
@@ -55,7 +55,7 @@
     "\n",
     "3) Now go to the terminal\n",
     "\n",
-    "4) Type  ```git clone <link>``` e.g  ```git clone https://github.com/funnyaccount/MyFirstRepoTutorial``` and hit enter. You might be asked for your GitHub  credentials.\n",
+    "4) Type  ```git clone <link>``` e.g  ```git clone https://github.com/funnyaccount/MyFirstRepoTutorial``` and hit enter. You might be asked for your GitHub credentials.\n",
     "\n",
     "Congratulations, your repo is on your machine!"
    ]
@@ -70,7 +70,7 @@
     "\n",
     "* ```git clone <link>``` - creates a copy of the repo on your machine. \n",
     "\n",
-    "* ```git add <file/directory>``` - stages changes for a commit. It is the first part of the two-step process of creating a new snapshot. Files must to be added before the commit. It needs to be run with an argument e.g.:\n",
+    "* ```git add <file/directory>``` - stages changes for a commit. It is the first part of the two-step process of creating a new snapshot. Files must be added before the commit. It needs to be run with an argument e.g.:\n",
     "\n",
     "    &ensp;```git add text.txt``` - stages the ```text.txt``` file\n",
     "    \n",
@@ -78,30 +78,28 @@
     "\n",
     "    &ensp;```git add . ``` - stages all the unstaged files, **very common**.\n",
     "\n",
-    "* ```git commit -m \"message\"``` - saves the snapshot in the project hostory. It works like a photo, anything staged with ```git add``` will become a part of this snapshot. It is a good practice to run it with the ```-m``` flag followed by a brief message what was done. Without ```-m``` you might be prompted to do it in a terminal text editor such as Vim, read about the [Vim commands](https://www.fprintf.net/vimCheatSheet.html).\n",
+    "* ```git commit -m \"message\"``` - saves the snapshot in the project history. It works as a photo, anything staged with ```git add``` will become a part of this snapshot. It is a good practice to run it with the ```-m``` flag followed by a brief message about what was done. Without ```-m``` you might be prompted to do it in a terminal text editor such as Vim. Read about the [Vim commands](https://www.fprintf.net/vimCheatSheet.html).\n",
     "\n",
     "* ```git status``` - shows which files are staged, modified or untracked.\n",
     "\n",
-    "* ```git pull``` - updates the local repository with the changes made on the remote one. If you work in a team and you friend commited code, you might want to ```git pull``` to have those changes on your machine.\n",
+    "* ```git pull``` - updates the local repository with the changes made on the remote one. If you work in a team and your friend committed code, you might want to ```git pull``` to have those changes on your machine.\n",
     "\n",
-    "* ```git push``` - updates the remote repository with your commits. **You need to us this command to update the code on GitHub**.\n",
+    "* ```git push``` - updates the remote repository with your commits. **You need to use this command to update the code on GitHub**.\n",
     "\n",
     "\n",
     "### Advanced commands:\n",
     "\n",
-    "* ```git init``` - initalizes a new Git repository and begins tracking the directory. Adds a hidden subfloder required for the version control. Have a look at the exercises if you want to try it! \n",
+    "* ```git init``` - initializes a new Git repository and begins tracking the directory. Adds a hidden subfolder required for the version control. Have a look at the exercises if you want to try it! \n",
     "\n",
-    "* ```git stash``` - this command is used quite unfrequently. It locally saves the work that is not ready to commit and gives a clean working directory. For instance, when working on a new feature that’s not complete, but an urgent bug needs attention:\n",
+    "* ```git stash``` - this command is used quite infrequently. It locally saves the work that is not ready to commit and gives a clean working directory. For instance, when working on a new feature that’s not complete, but an urgent bug needs attention:\n",
     "\n",
     "    &ensp;```git stash -u``` - saves the untracked files as well\n",
     "    \n",
-    "    &ensp;```git stash pop``` - brings th stashed work back to the directory\n",
+    "    &ensp;```git stash pop``` - brings the stashed work back to the directory\n",
     "\n",
-    "* ```git fetch``` - downloads meta-data but does not change the files on your machine. It allows you which files are changes in the latast version of a branch, but does no implement those changes. Follwed by  ```git merge FETCH_HEAD``` works the same as  ```git pull```\n",
+    "* ```git fetch``` - downloads meta-data but does not change the files on your machine. It allows you which files are changes in the latest version of a branch but does no implement those changes. Followed by  ```git merge FETCH_HEAD``` works the same as  ```git pull```\n",
     "\n",
-    "* ```git log``` - shows a chronological commit history for a repo.\n",
-    "\n",
-    "    "
+    "* ```git log``` - shows a chronological commit history for a repo."
    ]
   },
   {
@@ -121,9 +119,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Where circle denotes pushed commits. \n",
+    "Where circles denote pushed commits. \n",
     "\n",
-    "The commands we have discussed enable us to work on one *branch*. A branch is a version of a project. The great power of Git comes when we work on multiple branches. Such multi-branch project can have the following structure:\n",
+    "The commands we have discussed enable us to work on one *branch*. A branch is a version of a project. The great power of Git comes when we work on multiple branches. Such a multi-branch project can have the following structure:\n",
     "\n",
     "```{figure} programming_tools_images/GitWorkFlow.png\n",
     ":width: 100%\n",
@@ -134,15 +132,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Master** is usually the main branch of the project. All branches stem (immediately or not) from the master. When two braches become one, we say that they are *merged*. It is a good practice to merge all branches at the end of development process (unless the one of the branches is not relevant to the project). Cosider the branches from the diagram:\n",
+    "**Master** is usually the main branch of the project. All branches stem (immediately or not) from the master. When two braches become one, we say that they are *merged*. It is a good practice to merge all branches at the end of the development process (unless one of the branches is not relevant to the project). Consider the branches from the diagram:\n",
     "\n",
     "* FixRunner - there was a broken runner function in the structure of the project. One of the developers branched from the Master branch to fix it and then merged them.\n",
     "\n",
-    "* FrontEnd - the team working of the front end works created this branch not to intefere with the rest of developers. It is merged with the Master at the end of the production cycle.\n",
+    "* FrontEnd - the team working on the front end works created this branch not to interfere with the rest of developers. It is merged with the Master at the end of the production cycle.\n",
     "\n",
     "* OpenScreen - a feature developed by some people in the front end team.\n",
     "\n",
-    "* Unused - branch that did not end end up contributing to the final verision of the project."
+    "* Unused - branch that did not end up contributing to the final version of the project."
    ]
   },
   {
@@ -153,23 +151,23 @@
     "\n",
     "Let us consider the commands dealing with branches:\n",
     "\n",
-    "* Where circle denotes pushed commits. \n",
-    "\n",
-    "The commands we have discussed enable us to work on one *branch*. A branch is a version of a project. The great power of Git comes when we work on multiple branches. Such multi-branch project can have the following structure:\n",
-    "\n",
     "* ```git branch``` - this command has multiple effects depending on the arguments:\n",
     "\n",
     "    &ensp;```git branch``` - shows the branches being worked on locally.\n",
+    "    \n",
     "    &ensp;```git branch -a``` - shows remote and local branches.\n",
+    "    \n",
     "    &ensp;```git branch <branch_name>``` - creates a new branch.\n",
+    "    \n",
     "    &ensp;```git branch -d <branch_name>``` - deletes a branch.  \n",
     "    \n",
     "* ```git checkout``` - used to switch branches:\n",
     "\n",
     "    &ensp;```git checkout <branch_name>``` - move to an existing branch.\n",
+    "    \n",
     "    &ensp;```git checkout -b <branch_name>``` - create a brnach and move to it.\n",
     "    \n",
-    "* ```git merge <branch_name>``` - merges a a branch into the current working branch (```<branch_name>``` will no longer be an independent branch)."
+    "* ```git merge <branch_name>``` - merges a branch into the current working branch (```<branch_name>``` will no longer be an independent branch)."
    ]
   },
   {
@@ -192,7 +190,7 @@
     "vim Hello.txt\n",
     "```\n",
     "\n",
-    "This will take you to the Vim text editor. Type ```i``` to enter the editing mode. Type some text, when finished type click the ```esc``` button. Then type ```w``` and enter. Finally type ```qa``` and enter. New file is created!\n",
+    "This will take you to the Vim text editor. Type ```i``` to enter the editing mode. Type some text, when finished type click the ```esc``` button. Then type ```w``` and enter. Finally, type ```qa``` and enter. A new file is created!\n",
     "\n",
     "Now type in terminal:\n",
     "\n",
@@ -232,7 +230,7 @@
     "```shell\n",
     "git branch -a\n",
     "```\n",
-    "This should mention the ```master``` branches (remote and local) as well as the ```HEAD``` which is used as a reference for newly cloning repos. Now our aim is to create a new branch and move to it, there are two ways to do this:\n",
+    "This should mention the ```master``` branches (remote and local) as well as the ```HEAD``` which is used as a reference for newly cloning repos. Now we aim to create a new branch and move to it, there are two ways to do this:\n",
     "\n",
     "First:\n",
     "```shell\n",
@@ -277,7 +275,7 @@
     "-------------------\n",
     "* **Switching branches**\n",
     "\n",
-    "To verify that different branches containg different versions of the repository:\n",
+    "To verify that different branches containing different versions of the repository:\n",
     "\n",
     "```shell\n",
     "git checkout master\n",
@@ -367,7 +365,7 @@
     "\n",
     "print(f(67))\n",
     "```\n",
-    "In order to resolve this conflict, you will have to delete the the ```>>>>```, ```<<<<``` and ```=====``` markers together with branch names. **You also need to choose which version you want.** e.g.:\n",
+    "To resolve this conflict, you will have to delete the ```>>>>```, ```<<<<``` and ```=====``` markers together with branch names. **You also need to choose which version you want.** e.g.:\n",
     "```python\n",
     "def f(n):\n",
     "\n",
@@ -405,7 +403,7 @@
     "----------------\n",
     "* **Undo**\n",
     "\n",
-    "It happend to everyone, you have just pushed something that you did not want to. This is where the ```git revert``` command comes in. You will need to supply a commit hash (which can be found using the ```git log``` command. In this case we want to undo the very last commit, which is referenced under the name `HEAD`.\n",
+    "It happens to everyone, you have just pushed something that you did not want to. This is where the ```git revert``` command comes in. You will need to supply a commit hash (which can be found using the ```git log``` command. In this case, we want to undo the very last commit, which is referenced under the name `HEAD`.\n",
     "\n",
     "```shell\n",
     "git revert HEAD\n",
@@ -422,7 +420,7 @@
     "(version_control_git_exercises)=\n",
     "## Exercises\n",
     "---------\n",
-    "* ```.gitignore``` Sometimes you will want to ignore some files in your repository, maybe you just want to keep them to yourself or they are irrelevant to the project. The ```.gitignore``` allows you to do exacltly that. In it, you list the files you want to ignore. **Do the following**:\n",
+    "* ```.gitignore``` Sometimes you will want to ignore some files in your repository, maybe you just want to keep them to yourself or they are irrelevant to the project. The ```.gitignore``` allows you to do exactly that. In it, you list the files you want to ignore. **Do the following**:\n",
     "\n",
     "1) Create a file ```irrelevant.txt``` in your repo\n",
     "\n",
@@ -462,7 +460,7 @@
     "\n",
     "3) Did anything change on Github?\n",
     "\n",
-    "4) Now now pop from the stash, add, commit and push\n",
+    "4) Now pop from the stash, add, commit and push\n",
     "\n",
     "5) Can you see your file back?\n",
     "\n",
@@ -491,11 +489,11 @@
    "metadata": {},
    "source": [
     "## References\n",
-    "* Git Handbook, 2020, [What’s a version control system?](https://guides.github.com/introduction/git-handbook/)\n",
+    "* Git Handbook, 2020: [What’s a version control system?](https://guides.github.com/introduction/git-handbook/)\n",
     "\n",
-    "* Brian Kerr, beanstalk, 2016 [Common Git Commands](http://guides.beanstalkapp.com/version-control/common-git-commands.html)\n",
+    "* Brian Kerr, beanstalk, 2016: [Common Git Commands](http://guides.beanstalkapp.com/version-control/common-git-commands.html)\n",
     "\n",
-    "* GitHub Docs, 2020 [Ignoring files](https://docs.github.com/en/github/using-git/ignoring-files)"
+    "* GitHub Docs, 2020: [Ignoring files](https://docs.github.com/en/github/using-git/ignoring-files)"
    ]
   }
  ],
