Split nm1 notebooks #9

--- a/notebooks/3_mathematics/numerical_methods/11_Gaussian_elimination.ipynb
+++ b/notebooks/3_mathematics/numerical_methods/11_Gaussian_elimination.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(nm_guassian_elimination)=\n",
+    "(nm_gaussian_elimination)=\n",
     "# Gaussian elimination\n",
     "```{index} Gaussian elimination\n",
     "```\n",
@@ -184,7 +184,7 @@
     "Finally, we can solve first equation to find that \\\\(x=6\\\\).\n",
     "\n",
     "```\n",
-    "\n",
+    "(nm_gaussian_elimination_code)=\n",
     "## Implementation\n",
     "Notice that we are free to perform the following operations on the augmented system without changing the corresponding solution:\n",
     "\n",
