--- a/c_mathematics/numerical_methods/NM2/BTCS.ipynb
+++ b/c_mathematics/numerical_methods/NM2/BTCS.ipynb
@@ -132,7 +132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src =\"images/BTCS_stencil.png\">"
+    "![Image of BTCS](https://upload.wikimedia.org/wikipedia/commons/c/c6/Implicit_method-stencil.svg)"
    ]
   },
   {
