Change secondary title to double hash

--- a/notebooks/e_extra/Google_Earth_Engine_Foundations.ipynb
+++ b/notebooks/e_extra/Google_Earth_Engine_Foundations.ipynb
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Band maths\n",
+    "## Band maths\n",
     "There are many more functions than the below which can be applied, they are found in the linked manuals. but here is a demonstration on how they work. "
    ]
   },
