Split nm1 notbeooks #10

--- a/notebooks/c_mathematics/numerical_methods/11_Gaussian_elimination.ipynb
+++ b/notebooks/c_mathematics/numerical_methods/11_Gaussian_elimination.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "module-nm"
+    ]
+   },
    "source": [
     "(nm_gaussian_elimination)=\n",
     "# Gaussian elimination\n",
@@ -30,7 +34,7 @@
     "\\\\[\n",
     "\\left[\n",
     "  \\begin{array}{rr|r}\n",
-    "    2 &amp 3 & 7 \\\\\\\\\\\\\n",
+    "    2 & 3 & 7 \\\\\\\\\\\\\n",
     "    2 & -8 & 6 \\\\\\\\\\\\\n",
     "  \\end{array}\n",
     "\\right].\n",
