--- a/notebooks/c_mathematics/numerical_methods/1_Interpolation_curve_fitting.ipynb
+++ b/notebooks/c_mathematics/numerical_methods/1_Interpolation_curve_fitting.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "module-nm"
+    ]
+   },
    "source": [
     "(nm_interpolation_curve_fitting)=\n",
     "# Interpolation and curve fitting\n",
