--- a/notebooks/c_mathematics/numerical_methods/2_Numerical_differentiation.ipynb
+++ b/notebooks/c_mathematics/numerical_methods/2_Numerical_differentiation.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "module-nm"
+    ]
+   },
    "source": [
     "(nm_num_differentiation)=\n",
     "# Numerical differentiation\n",
