--- a/notebooks/c_mathematics/numerical_methods/3_Timestepping_an_ODE.ipynb
+++ b/notebooks/c_mathematics/numerical_methods/3_Timestepping_an_ODE.ipynb
@@ -42,8 +42,17 @@
     "\n",
     "\\\\[u' = u + t^3.\\\\]\n",
     "\n",
-    "The first two examples are relatively easy for us to solve analytically, the final case is a bit more challenging and we may need to resort to a numerical approach (or attempt symbolic computation).\n",
-    "\n",
+    "The first two examples are relatively easy for us to solve analytically, the final case is a bit more challenging and we may need to resort to a numerical approach (or attempt symbolic computation)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "module-nm"
+    ]
+   },
+   "source": [
     "(nm_euler_method)=\n",
     "## Forward Euler scheme\n",
     "```{index} Forward Euler scheme\n",
