--- a/notebooks/c_mathematics/numerical_methods/9_Roots_of_equations.ipynb
+++ b/notebooks/c_mathematics/numerical_methods/9_Roots_of_equations.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "module-nm"
+    ]
+   },
    "source": [
     "(nm_roots_of_equations)=\n",
     "# Roots of equations\n",
