--- a/notebooks/c_mathematics/numerical_methods/10_linear_algebra_intro.ipynb
+++ b/notebooks/c_mathematics/numerical_methods/10_linear_algebra_intro.ipynb
@@ -1,9 +1,12 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "module-nm"
+    ]
+   },
    "source": [
     "(nm_linear_algebra_intro)=\n",
     "# Linear algebra introduction\n",
@@ -800,6 +803,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
