--- a/notebooks/c_mathematics/numerical_methods/4_Heuns_method.ipynb
+++ b/notebooks/c_mathematics/numerical_methods/4_Heuns_method.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "module-nm"
+    ]
+   },
    "source": [
     "(nm_heun_method)=\n",
     "# Heun's method\n",
